--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <main>
-
+            <!-- <canvas id='canvas' width=window.innerWidth height=window.innerHeight/> -->
         </main>
         <script src="./index.js"></script>
     </body>
